# GRASP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  augumentation.py  cellplot.py  filter.py  network.py  partition.py  portrait.py  pyproject.toml  register.py  requirements.txt
demo_pkl/: pairs.csv  tiny_registered.pkl
docs/: RELEASING.md
envs/: grasp-base.yml
example_pkl/: data1_simulated1_label.csv
grasp_tool/: __init__.py  __main__.py
grasp_tool/cli/: __init__.py  main.py  train_moco.py
grasp_tool/gnn/: __init__.py  embedding.py  gat_moco_final.py  graphloader.py  plot_refined.py
grasp_tool/preprocessing/: __init__.py  augumentation.py  cellplot.py  filter.py  network.py  partition.py  portrait.py  register.py
scripts/: check_no_cjk.py  make_tiny_demo_pkl.py  tiny_demo_example_pkl.sh
