[tool.poetry]
name = "grasp-tool"
version = "0.1.1"
description = "GRASP: a graph-based representation learning toolkit for spatial transcriptomics"
authors = ["wzx <unknown@example.com>"]
readme = "README.md"

# Only package the canonical Python package.
packages = [{ include = "grasp_tool" }]

# Keep source distributions small; exclude large/third-party/reference assets.
exclude = [
  "ELLA/**",
  "demo_pkl/**",
  "example_pkl/**",
  "envs/**",
  "outputs/**",
  "*.docx",
  "PLAN.md",
  "AGENTS.md",
  "AGENT.md",
  "grasp_conversation_first.md",
  "grasp_conversation_second.md",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# default = core + viz (training deps installed via conda; not pulled from PyPI)
numpy = "^1.26"
pandas = "^2.0"
scipy = "^1.9"
tqdm = "^4.0"
scikit-learn = "^1.0"
matplotlib = "^3.7"
seaborn = "^0.13"
shapely = "^2.0"
networkx = "^3.2"
joblib = "^1.3"

umap-learn = "^0.5"
python-igraph = "^0.11"
leidenalg = "^0.10"

# optional extras
POT = { version = "^0.9", optional = true }

[tool.poetry.extras]
ot = ["POT"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
isort = "^5.13"
mypy = "^1.13"
twine = "^6.0"
build = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grasp-tool = "grasp_tool.cli.main:main"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
